--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>IMMACULATE WALTER</h3>
         <img src="hottie.jpg"width="200 px" length="200 px" alt = "Hottest girl in the world"><img src="maqi.jpg" width="200 px" length="200 px"  alt = "Hottest girl in the world">
         <ul>
-            <li></li>
+            <li>I dont even know what to say about this girl.She is just the best friend you could possibly ask for.</li>
         </ul>
         <h3>ETHEL KIPLAGAT</h3>
         <img src="fire.jpg"width= "300 px"length = "300 px"> <img src="nice.jpg" length="300 px"width = "300 px"><img src="ethel.jpg"width = "300 px"length ="300 px">
